--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,7 +3,7 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = python -msphinx
-SPHINXPROJ    = pybrowser
+SPHINXPROJ    = thatscrapper
 SOURCEDIR     = .
 BUILDDIR      = _build
 
