--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ selenium = "^4.5.0"
 pandas = "^1.5.0"
 lxml = "^4.9.1"
 polling2 = "^0.5.0"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 
