--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,17 @@
 [tool.poetry]
 name = "thatscraper"
 version = "0.1.0"
-description = "A selenium framework for automated actions on browsers"
+description = "A selenium adapter for automated actions on browsers."
 authors = ["Vagner Bessa"]
 license = "MIT"
 readme = "README.md"
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Topic :: Internet"
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -27,3 +34,5 @@ jupyter = "^1.0.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
