--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pandas = "^1.5.0"
 lxml = "^4.9.1"
 polling2 = "^0.5.0"
 requests = "^2.28.1"
+webdriver-manager = "^3.8.5"
 
 [tool.poetry.dev-dependencies]
 
